--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "vite build && wrangler pages deploy dist"
+    "deploy": "npx convex deploy --yes && VITE_CONVEX_URL=https://disciplined-iguana-72.convex.cloud vite build && wrangler pages deploy dist"
   },
   "dependencies": {
+    "convex": "^1.31.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
